# cloud-run-fastapi-template

./: Procfile  README.md  cookiecutter.json  docker-compose.yml  justfile  pyproject.toml  requirements.txt
template_app/: main.py  settings.py
template_app/alembic/: alembic.ini  env.py
template_app/api/: deps.py
template_app/db/: __init__.py
template_app/models/: __init__.py  base_class.py
tests/: test_root.py
tests/api/v1/: test_root.py
{{cookiecutter.project_name}}/: .env.dev  .gitignore  .pre-commit-config.yaml  Procfile  README.md  docker-compose.yml  justfile  pyproject.toml  requirements.txt
{{cookiecutter.project_name}}/tests/: conftest.py
{{cookiecutter.project_name}}/tests/api/v1/: test_root.py
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/: logging.py  main.py  settings.py
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/alembic/: alembic.ini  env.py
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/api/: deps.py
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/api/v1/: __init__.py
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/db/: __init__.py  base_class.py  session.py
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/models/: __init__.py
