[tool.poetry]
name = "cloud-run-fastapi-template"
version = "0.1.0"
description = ""
authors = ["Lennox Stevenson <lennox.stevenson@mail.utoronto.ca>"]
readme = "README.md"
packages = [{include = "cloud_run_fastapi_template"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
