[tool.poetry]
name = "cloud-run-fastapi-template"
version = "0.1.0"
description = ""
authors = ["Lennox Stevenson <lennox.stevenson@mail.utoronto.ca>"]
readme = "README.md"
packages = [{include = "template_app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.95.2"}
gunicorn = "^20.1.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
ruff = "^0.0.270"
black = "^23.3.0"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true

[tool.ruff]
select = ["E", "F", "UP", "I"]
